--- a/tasks/sub-tasks/git_action_pull.yml
+++ b/tasks/sub-tasks/git_action_pull.yml
@@ -3,3 +3,4 @@
   shell: 
     cmd: 'git -C {{ item.path }} pull {{ action.from }}'
   # ignore_errors: true
+  ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
