--- a/tasks/sub-tasks/git_enable_actions.yml
+++ b/tasks/sub-tasks/git_enable_actions.yml
@@ -1,10 +1,20 @@
 ---
+# - debug:
+#     var: "{{ action.ignore_error | default('false') }}"
+#   loop: "{{ item.actions | flatten }}"
+#   loop_control:
+#     loop_var: action
+#   when: 
+#     - stat_git.stat.exists | bool
+#     - item.actions is iterable
+    
 - name: "{{ item.name }} git commit"
   include_tasks:
     file: "tasks/sub-tasks/git_action_{{ action.action }}.yml"
   loop: "{{ item.actions | flatten }}"
   loop_control:
     loop_var: action
+  # ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
   when: 
     - stat_git.stat.exists | bool
     - item.actions is iterable
