--- a/tasks/sub-tasks/git_action_command.yml
+++ b/tasks/sub-tasks/git_action_command.yml
@@ -1,6 +1,6 @@
 ---
 - name: '[{{ ansible_loop.index }}/{{ ansible_loop.length }}] {{ repo.name }} "git {{ action.command }}"'
   ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: "git -C {{ repo.path }} {{ action.command }}"
   # ignore_errors: true
