--- a/tasks/sub-tasks/git_action_commit.yml
+++ b/tasks/sub-tasks/git_action_commit.yml
@@ -7,7 +7,7 @@
     and
     commit_output.rc > 0
   # ignore_errors: true
-  ansible.builtin.shell:
+  ansible.builtin.command:
     # cmd: 'git -C {{ repo.path }} commit -m "{{ action.message }}" || true'
     # cmd: 'git -C {{ repo.path }} commit --allow-empty -m "{{ action.message }}" '
     cmd: 'git -C {{ repo.path }} commit {{ action.extra_params | default("") }} --message="{{ git_repos_commit_msg | default(action.message) }}"'
