--- a/tasks/sub-tasks/git_action_push.yml
+++ b/tasks/sub-tasks/git_action_push.yml
@@ -1,6 +1,6 @@
 ---
 - name: "[{{ ansible_loop.index }}/{{ ansible_loop.length }}] {{ repo.name }} git push to {{ action.to }}"
   ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: "git -C {{ repo.path }} push {{ action.extra_params | default('') }} {{ action.to }}"
   # ignore_errors: true
