--- a/tasks/sub-tasks/git_action_add.yml
+++ b/tasks/sub-tasks/git_action_add.yml
@@ -1,5 +1,5 @@
 ---
-- name: '[{{ ansible_loop.index }}/{{ ansible_loop.length }}] {{ repo.name }} git add "{{ action.content }}"'
+- name: "Run git add for {{ repo.name }}"
   ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
   ansible.builtin.command:
     cmd: "git -C {{ repo.path }} add {{ action.extra_params | default('') }} {{ action.content }}"
