--- a/tasks/sub-tasks/git_action_commit.yml
+++ b/tasks/sub-tasks/git_action_commit.yml
@@ -1,5 +1,5 @@
 ---
-- name: '[{{ ansible_loop.index }}/{{ ansible_loop.length }}] {{ repo.name }} git commit "{{ action.message }}"'
+- name: "Run git commit for {{ repo.name }}"
   ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
   register: commit_output
   failed_when: >
