--- a/tasks/sub-tasks/git_action_push.yml
+++ b/tasks/sub-tasks/git_action_push.yml
@@ -1,5 +1,5 @@
 ---
-- name: "[{{ ansible_loop.index }}/{{ ansible_loop.length }}] {{ repo.name }} git push to {{ action.to }}"
+- name: "Run git pull for {{ repo.name }}"
   ignore_errors: "{{ action.ignore_error | default('false') | bool }}"
   ansible.builtin.command:
     cmd: "git -C {{ repo.path }} push {{ action.extra_params | default('') }} {{ action.to }}"
