--- a/tasks/sub-tasks/git_remote.yml
+++ b/tasks/sub-tasks/git_remote.yml
@@ -1,50 +1,53 @@
 ---
-# - name: "{{ repo.name }} git remote remove {{ remote.name }}"
-#   ansible.builtin.command:
-#     cmd: 'git -C {{ repo.path }} remote remove {{ remote.name }} || echo 0'
-#   when: remote.state == "absent"
-
-# - name: "{{ repo.name }} git remote add {{ remote.name }} {{ remote.url }}"
-#   ansible.builtin.command:
-#     cmd: 'git -C {{ repo.path }} remote add {{ remote.name }} {{ remote.url }} || echo 0'
-#   when: remote.state == "present"
-
 
 - name: "Run git remote remove for {{ repo.name }}"
   when: remote.state == "absent"
-  block:
-    - name: "Run git remote remove url for {{ repo.name }}"
-      community.general.git_config:
-        name: "remote.{{ remote.name }}.url"
-        # value: "{{ remote.url }}"
-        state: "absent"
-        scope: local
-        repo: "{{ repo.path }}"
-
-    - name: "Run git remote remove fetch for {{ repo.name }}"
-      community.general.git_config:
-        name: "remote.{{ remote.name }}.fetch"
-        # value: "+refs/heads/*:refs/remotes/origin/*"
-        state: "absent"
-        scope: local
-        repo: "{{ repo.path }}"
-
+  ignore_errors: "{{ remote.ignore_error | default('false') | bool }}"
+  ansible.builtin.command:
+    cmd: "git -C {{ repo.path }} remote remove {{ remote.extra_params | default('') }} {{ remote.name }}"
 
 - name: "Run git remote add for {{ repo.name }}"
   when: remote.state == "present"
-  block:
-    - name: "Run git remote add url for {{ repo.name }}"
-      community.general.git_config:
-        name: "remote.{{ remote.name }}.url"
-        value: "{{ remote.url }}"
-        state: "present"
-        scope: local
-        repo: "{{ repo.path }}"
+  ignore_errors: "{{ remote.ignore_error | default('false') | bool }}"
+  ansible.builtin.command:
+    cmd: "git -C {{ repo.path }} remote add {{ remote.extra_params | default('') }} {{ remote.name }} {{ remote.url }}"
 
-    - name: "Run git remote add fetch for {{ repo.name }}"
-      community.general.git_config:
-        name: "remote.{{ remote.name }}.fetch"
-        value: "+refs/heads/*:refs/remotes/{{ remote.name }}/*"
-        state: "present"
-        scope: local
-        repo: "{{ repo.path }}"
+
+# - name: "Run git remote remove for {{ repo.name }}"
+#   when: remote.state == "absent"
+#   block:
+#     - name: "Run git remote remove url for {{ repo.name }}"
+#       community.general.git_config:
+#         name: "remote.{{ remote.name }}.url"
+#         # value: "{{ remote.url }}"
+#         state: "absent"
+#         scope: local
+#         repo: "{{ repo.path }}"
+
+#     # - name: "Run git remote remove fetch for {{ repo.name }}"
+#     #   community.general.git_config:
+#     #     name: "remote.{{ remote.name }}.fetch"
+#     #     # value: "+refs/heads/*:refs/remotes/origin/*"
+#     #     state: "absent"
+#     #     scope: local
+#     #     repo: "{{ repo.path }}"
+
+
+# - name: "Run git remote add for {{ repo.name }}"
+#   when: remote.state == "present"
+#   block:
+#     - name: "Run git remote add url for {{ repo.name }}"
+#       community.general.git_config:
+#         name: "remote.{{ remote.name }}.url"
+#         value: "{{ remote.url }}"
+#         state: "present"
+#         scope: local
+#         repo: "{{ repo.path }}"
+
+#     # - name: "Run git remote add fetch for {{ repo.name }}"
+#     #   community.general.git_config:
+#     #     name: "remote.{{ remote.name }}.fetch"
+#     #     value: "+refs/heads/*:refs/remotes/{{ remote.name }}/*"
+#     #     state: "present"
+#     #     scope: local
+#     #     repo: "{{ repo.path }}"
